education section complete

--- a/index.html
+++ b/index.html
@@ -70,9 +70,38 @@
 
     <div id="educationSection">
         <div id="education_name">Education</div>
+        <div id="degree">
+            <div id="date">
+                <img src="img/sparkle.png">
+                <div>2023-2026</div>
+            </div>
+            <div id="university">
+                University of Tampa- Tampa, FL<br>
+                Bachelor of Science in Computer Science with a minor in New Media
+            </div>
+            <div id="course">
+                <span>Coursework -</span> Data Structures and Algorithms, Web Development, 
+                Object Oriented Programming (Java/Python/C++), 
+                Software Engineering/Software Design, UX/UI Design, 
+                Interactive Media / Digital Design, Operating Systems, 
+                Computer Architecture, Network Security, Discrete Mathematics, 
+                Computational Linear Algebra
+            </div>
+        </div>
     </div>
 
- 
+    <div id="Skills">
+        <div><span>Skills</span></div>
+        <div id="lang">
+            <img src="img/sparkle.png">
+            <div>Languages and Frameworks</div>
+        </div>
+        <div id ="lang2">
+            <div></div>
+            
+
+        </div>
+    </div>
 
     <script src="index.js"></script>
 </body>
