working on skills section

--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Racing+Sans+One&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Racing+Sans+One&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=DM+Serif+Display:ital@0;1&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Libre+Caslon+Display&display=swap" rel="stylesheet">
 </head>
 <body>
     <div id="container">
@@ -72,7 +73,7 @@
         <div id="education_name">Education</div>
         <div id="degree">
             <div id="date">
-                <img src="img/sparkle.png">
+                <img src="img/sparkle.png "  width="50px" height="auto">
                 <div>2023-2026</div>
             </div>
             <div id="university">
@@ -93,13 +94,34 @@
     <div id="Skills">
         <div><span>Skills</span></div>
         <div id="lang">
-            <img src="img/sparkle.png">
+            <img src="img/sparkle.png" width="50px" height="auto">
             <div>Languages and Frameworks</div>
         </div>
         <div id ="lang2">
-            <div></div>
-            
+            <div>Python</div><div>•</div>
+            <div>Java</div><div>•</div>
+            <div>C++</div><div>•</div>
+            <div>C</div><div>•</div>
+            <div>HTML</div><div>•</div>
+            <div>CSS</div><div>•</div>
+            <div>JavaScript</div><div>•</div>
+            <div>React</div><div>•</div>
+            <div>Node.js</div><div>•</div>
+            <div>SQL</div><div>•</div>
+            <div>Git</div><div>•</div>
+            <div>Linux</div>
+        </div>
 
+        <div id="lang3">
+            <img src="img/sparkle.png" width="50px" height="auto">
+            <div>Tools and Technologies</div>  
+        </div>
+        <div id="lang4">
+            <img src="img/figma.png" class="tool-img" height="50px">
+            <img src="img/adobe-photoshop.png" class="tool-img" height="50px">
+            <img src="img/adobe-illustrator.png" class="tool-img" height="50px">
+            <img src="img/asana.png" class="tool-img" height="55px">
+        </div>
         </div>
     </div>
 
