--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
             </a>
             <a href="cs_design_projects.html" class="project-card">
                 <div class="project-content">
-                    <h3>Explore more cs and design projects</h3>
+                    <h3>Explore more CS and Design projects</h3>
                 </div>
                 <img src="images_1/link.png" class="link_icon">
             </a>
@@ -160,7 +160,7 @@
             <p class="skill-subtitle">I design and code to make digital experiences smoother</p>
         </div>
         
-        <div class="skill-pill pill-1"> Agile Methodologies (Scrum and Kanban)</div>
+        <div class="skill-pill pill-1">Agile Methodologies (Scrum and Kanban)</div>
         <div class="skill-pill pill-2">HTML/CSS</div>
         <div class="skill-pill pill-3">Python</div>
         <div class="skill-pill pill-4">UX Design</div>
@@ -187,7 +187,7 @@
         <div class="about-text">
             <p>I am a <span >Computer Science </span>major with a minor in New Media at the University of Tampa, with a strong interest in creating thoughtful, user-centered digital experiences. <br><br>
                 I serve as the President of the Girls Who Code club at my university, where I enjoy organizing design workshops, coding sessions, interview preparation events, and collaborative learning spaces. <br><br>
-                I’m passionate about UX design, including user research, wireframing, and prototyping, and I enjoy exploring how technology and design come together to solve real problems.<br><br>
+                I'm passionate about UX design, including user research, wireframing, and prototyping, and I enjoy exploring how technology and design come together to solve real problems.<br><br>
                 Design, for me, is about crafting experiences that people enjoy and understand effortlessly.</p>
         </div>
     </section>
