fonts final change

--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
         <div class="about-text">
             <p>I am a <span >Computer Science </span>major with a minor in New Media at the University of Tampa, with a strong interest in creating thoughtful, user-centered digital experiences. <br><br>
                 I serve as the President of the Girls Who Code club at my university, where I enjoy organizing design workshops, coding sessions, interview preparation events, and collaborative learning spaces. <br><br>
-                I'm passionate about UX design, including user research, wireframing, and prototyping, and I enjoy exploring how technology and design come together to solve real problems.<br><br>
+                I'm passionate about UX design and frontend development, including user research, wireframing, prototyping, and building interactive interfaces, and I enjoy exploring how technology and design come together to solve real problems.<br><br>
                 Design, for me, is about crafting experiences that people enjoy and understand effortlessly.</p>
         </div>
     </section>
