--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
                 </div>
                 <div class="project-content">
                     <h3>SculptFit</h3>
-                    <p>Simple, smart, social shopping</p>
+                    <p> To Empower gym-goers with personalized workout plans and progress tracking.</p>
                 </div>
                 <img src="images_1/link.png" class="link_icon">
             </a>
@@ -130,7 +130,7 @@
                 </div>
                 <div class="project-content">
                     <h3>Snack Bar</h3>
-                    <p>AI playlist of food and places</p>
+                    <p>To empower gym-goers with personalized workout plans and progress tracking.</p>
                 </div>
                 <img src="images_1/link.png" class="link_icon">
             </a>
@@ -140,7 +140,7 @@
                 </div>
                 <div class="project-content">
                     <h3>UTampa App</h3>
-                    <p>Interactive application assistant tool</p>
+                    <p>To empower gym-goers with personalized workout plans and progress tracking.</p>
                 </div>
                 <img src="images_1/link.png" class="link_icon">
             </a>
