--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
             <p class="skill-subtitle">I design and code to make digital experiences smoother</p>
         </div>
         
-        <div class="skill-pill pill-1">Agile Methodologies (Scrum and Kanban)</div>
+        <div class="skill-pill pill-1">Agile Methodologies</div>
         <div class="skill-pill pill-2">HTML/CSS</div>
         <div class="skill-pill pill-3">Python</div>
         <div class="skill-pill pill-4">UX Design</div>
